--- a/dts/msm8916/msm8916-512mb-mtp.dts
+++ b/dts/msm8916/msm8916-512mb-mtp.dts
@@ -20,6 +20,16 @@
 		lk2nd,match-cmdline = "* mdss_mdp.panel=1:spi:0:qcom,mdss_spi_st7735s_128128_cmd";
 	};
 
+	ldw924 {
+		model = "LDW923/LDW924 4G Modem Stick";
+		compatible = "ufi,ldw924", "qcom,msm8916", "lk2nd,device";
+
+		/* Register Reset button as HOME button */
+		/* This is the only button on this device */
+		lk2nd,keys = <KEY_HOME 20 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
+		lk2nd,match-cmdline = "* mdss_mdp.panel=1:spi:0:qcom,mdss_spi_st7735s_128128_cmd";
+	};
+
 	/*
 	 * Note:
 	 * Due to some unknown reasons, the stock aboot firmware is incompatible
